# SO-2021

./: .gitignore  README.md
examples/: Makefile  Makefile_lib  Makefile_with_lib
examples/cli/: cli.c  cli_context.h  command.h  timekeeping.c  timekeeping.h
examples/file/: file_examples.c
examples/pipe/: pipe_management.c
examples/process/: child_utils.c
examples/pthread_test/: Makefile
examples/pthread_test/src/: common.c  common.h  elf.c  main.c  raindeer.c  santa.c  santa.h  utils.c  utils.h
examples/signal_1/: main.c
kolos2/Kolokwium2/CondVar/: main.c  makefile
kolos2/Kolokwium2/calcSocketUnixDGram/: receiver.c  sender.c
kolos2/Kolokwium2/semFile_V/: common.txt  main.c
lab1/: Makefile
lab10/: Makefile
lab10/src/: client.c  client_socket.c  client_socket.h  comm.c  comm.h  comm_tcp.h  defs.c  defs.h  game_state.c  game_state.h  logs.h  msgqueue.c  msgqueue.h  server.c
lab1_cli/: Makefile  raport2.txt  raport3a.txt  raport3b.txt
lab1_cli/src/: cli_context.h  command.h  command_begin_report.c  command_begin_report.h  command_create_table.c  command_create_table.h  command_merge_files.c  command_merge_files.h  command_print_block.c  command_print_block.h  command_remove_block.c  command_remove_block.h  command_remove_row.c  command_remove_row.h  command_save_block.c  command_save_block.h  main.c  timekeeping.h
lab2/filter/: CMakeLists.txt  pomiar_zad_2.txt
lab2/filter/src/: main.c
lab2/merger/: CMakeLists.txt  pomiar_zad_1.txt
lab2/merger/src/: main.c  mergeutils.c  mergeutils.h
lab2/storeutils/src/: storeutils.h
lab2/zad3/: CMakeLists.txt  pomiar_zad_3.txt
lab2/zad3/src/: main.c
lab2/zad4/: CMakeLists.txt  pomiar_zad_4.txt
lab2/zad4/src/: main.c
lab2/zad5/: CMakeLists.txt  pomiar_zad_5.txt
lab2/zad5/src/: main.c
lab3/: zad2_example_input.txt
lab3/mergeutils/: .gitignore  Makefile
lab3/storeutils/: CMakeLists.txt
lab3/zad1/: CMakeLists.txt  main.c
lab3/zad2/: CMakeLists.txt  main.c  report.txt
lab3/zad3/: CMakeLists.txt  main.c
lab4/zad1/: CMakeLists.txt  main.c  mode.c  mode.h  other.c  report2.txt
lab4/zad2/: CMakeLists.txt  main.c
lab5/zad1/: Makefile
lab5/zad2/: Makefile
lab5/zad3/: Makefile  wnioski.txt
lab6/zad1/: Makefile
lab7/zad1/: Makefile  wnioski.txt
lab8/zad1/: Makefile  Times.txt
lab9/zad1/: Makefile
(+84 files in other folders)
